[tool.poetry]
name = "copilotkit"
version = "0.1.78"
description = "CopilotKit python SDK"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://copilotkit.ai"
repository = "https://github.com/CopilotKit/CopilotKit/tree/main/sdk-python"
keywords = ["copilot", "copilotkit", "langgraph", "langchain", "ai", "langsmith", "langserve"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
langgraph = {version = ">=0.3.25,<1.1.0"}
langchain = {version = ">=0.3.0"}
ag-ui-langgraph = { version = ">=0.0.24", extras = ["fastapi"] }
fastapi = "^0.121.1"
partialjson = "^0.0.8"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
